// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingIcon Style tests should have active LoadingIcon styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

.circuit-0 {
  width: 100%;
  height: 100%;
}

.circuit-0 > path {
  fill: #FFFFFF;
}

.circuit-0 > path {
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.circuit-3 {
  opacity: 0;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  position: relative;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 1;
  height: 16px;
  width: 16px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<div
  aria-busy="true"
  aria-live="assertive"
  class="circuit-2 circuit-3 circuit-4"
  role="alert"
>
  <div
    class="circuit-0 circuit-1"
    dark="0"
  >
    spinner.svg
  </div>
</div>
`;

exports[`LoadingIcon Style tests should have disabled LoadingIcon styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

.circuit-3 {
  opacity: 0;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  position: relative;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  height: 16px;
  width: 16px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.circuit-0 {
  width: 100%;
  height: 100%;
}

.circuit-0 > path {
  fill: #FFFFFF;
}

.circuit-0 > path {
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

<div
  aria-busy="true"
  aria-live="assertive"
  class="circuit-2 circuit-3 circuit-4"
  role="alert"
>
  <div
    class="circuit-0 circuit-1"
    dark="0"
  >
    spinner.svg
  </div>
</div>
`;

exports[`LoadingIcon Style tests should have error LoadingIcon styles 1`] = `
HTMLCollection [
  @keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

.circuit-3 {
  opacity: 0;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  position: relative;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  height: 16px;
  width: 16px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.circuit-0 {
  width: 100%;
  height: 100%;
}

.circuit-0 > path {
  fill: #FFFFFF;
}

.circuit-0 > path {
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

<div
    aria-busy="true"
    aria-live="assertive"
    class="circuit-2 circuit-3 circuit-4"
    role="alert"
  >
    <div
      class="circuit-0 circuit-1"
      dark="0"
    >
      spinner.svg
    </div>
  </div>,
  @keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: scale3d(0,0,0);
    -ms-transform: scale3d(0,0,0);
    transform: scale3d(0,0,0);
  }

  100% {
    opacity: 1;
    -webkit-transform: scale3d(1,1,1);
    -ms-transform: scale3d(1,1,1);
    transform: scale3d(1,1,1);
  }
}

.circuit-2 {
  height: 16px;
  width: 16px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.circuit-0 {
  -webkit-transform: scale3d(0,0,0);
  -ms-transform: scale3d(0,0,0);
  transform: scale3d(0,0,0);
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  height: 100%;
  width: 100%;
  -webkit-animation: animation-0 200ms ease-in-out;
  animation: animation-0 200ms ease-in-out;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
}

<div
    class="circuit-2 circuit-3"
  >
    <div
      class="circuit-0 circuit-1"
    >
      error.svg
    </div>
  </div>,
]
`;

exports[`LoadingIcon Style tests should have giga LoadingIcon styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

.circuit-0 {
  width: 100%;
  height: 100%;
}

.circuit-0 > path {
  fill: #FFFFFF;
}

.circuit-0 > path {
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.circuit-3 {
  opacity: 0;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  position: relative;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  height: 32px;
  width: 32px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<div
  aria-busy="true"
  aria-live="assertive"
  class="circuit-2 circuit-3 circuit-4"
  role="alert"
>
  <div
    class="circuit-0 circuit-1"
    dark="0"
  >
    spinner.svg
  </div>
</div>
`;

exports[`LoadingIcon Style tests should have kilo LoadingIcon styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

.circuit-3 {
  opacity: 0;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  position: relative;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  height: 16px;
  width: 16px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.circuit-0 {
  width: 100%;
  height: 100%;
}

.circuit-0 > path {
  fill: #FFFFFF;
}

.circuit-0 > path {
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

<div
  aria-busy="true"
  aria-live="assertive"
  class="circuit-2 circuit-3 circuit-4"
  role="alert"
>
  <div
    class="circuit-0 circuit-1"
    dark="0"
  >
    spinner.svg
  </div>
</div>
`;

exports[`LoadingIcon Style tests should have mega LoadingIcon styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

.circuit-0 {
  width: 100%;
  height: 100%;
}

.circuit-0 > path {
  fill: #FFFFFF;
}

.circuit-0 > path {
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.circuit-3 {
  opacity: 0;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  position: relative;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  height: 24px;
  width: 24px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<div
  aria-busy="true"
  aria-live="assertive"
  class="circuit-2 circuit-3 circuit-4"
  role="alert"
>
  <div
    class="circuit-0 circuit-1"
    dark="0"
  >
    spinner.svg
  </div>
</div>
`;

exports[`LoadingIcon Style tests should have success LoadingIcon styles 1`] = `
HTMLCollection [
  @keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

.circuit-3 {
  opacity: 0;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  position: relative;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  height: 16px;
  width: 16px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.circuit-0 {
  width: 100%;
  height: 100%;
}

.circuit-0 > path {
  fill: #FFFFFF;
}

.circuit-0 > path {
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

<div
    aria-busy="true"
    aria-live="assertive"
    class="circuit-2 circuit-3 circuit-4"
    role="alert"
  >
    <div
      class="circuit-0 circuit-1"
      dark="0"
    >
      spinner.svg
    </div>
  </div>,
  @keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: scale3d(0,0,0);
    -ms-transform: scale3d(0,0,0);
    transform: scale3d(0,0,0);
  }

  100% {
    opacity: 1;
    -webkit-transform: scale3d(1,1,1);
    -ms-transform: scale3d(1,1,1);
    transform: scale3d(1,1,1);
  }
}

.circuit-2 {
  height: 16px;
  width: 16px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.circuit-0 {
  -webkit-transform: scale3d(0,0,0);
  -ms-transform: scale3d(0,0,0);
  transform: scale3d(0,0,0);
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  height: 100%;
  width: 100%;
  -webkit-animation: animation-0 200ms ease-in-out;
  animation: animation-0 200ms ease-in-out;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
}

<div
    class="circuit-2 circuit-3"
  >
    <div
      class="circuit-0 circuit-1"
    >
      success.svg
    </div>
  </div>,
]
`;
